lintian (2.5.68) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/cruft.pm:
    + [CL] Avoid a false-positive reported by Theppitak Karoonboonyanan
      when matching autotools-pkg-config-macro-not-cross-compilation-safe
      by skipping comment lines.  (Closes: #886297)
  * checks/debconf.pm:
    + [CL] Don't warn about unknown template type "entropy" when a package
      depends on cdebconf.  (Closes: #677870)
  * checks/fields.pm:
    + [CL] Warn about orphaned packages that are not maintained in the
      Debian infrastucture.  (Closes: #886057)
    + [CL] Emit pedantic warnings for packages that refer to a non-Git
      version control systems hosted in the Debian infrastructure for the
      upcoming salsa.debian.org migration.  (Closes: #885974)
    + [CL] Include the offending "Bugs" field value in the output of the
      bugs-field-does-not-refer-to-debian-infrastructure tag.
    + [CL] Ensure that bugs-field-does-not-refer-to-debian-infrastructure
      can be overridden by not emitting them for -dbgsym packages. Thanks
      to Thorsten Glaser for the report.  (Closes: #886426)
  * checks/huge-usr-share.pm:
    + [CL] Bump arch-dep-package-has-big-usr-share thresholds; they were
      last set in 2004.  (Closes: #648755)
  * checks/python.{pm,desc}:
    + [CL] Don't warn about django-package-does-not-depend-on-django for
      -doc packages, etc.
    + [CL] Lower the severity of the
      "dependency-on-python-version-marked-for-end-of-life" tag from normal
      ("W:") to wishlist ("I:") as it is not necessarily actionable by the
      maintainer. This reverts bug #883581.  (Closes: #886259)
  * checks/rules.pm:
    + [CL] Also allow $(overridden_command) when checking for the
      override_dh_fixperms-does-not-call-dh_fixperms etc. tags.
  * checks/scripts.desc:
    + [CL] Also mention Recommends and Suggests in the opening paragraph of
      python-script-but-no-python-dep.  (Closes: #687141)
  * checks/shared-libs.pm: